--- a/qrcode.html
+++ b/qrcode.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" name="viweport" content="width=device-width, initial-scale=1.0">
-        <title>QR codes for Front-end Mentor</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <title>Frontend Mentor | QR code component</title>
         <link href="qrcode.css" rel="stylesheet">
     </head>
     <body>
         <main>
+            <section>
             <div class="container">
                 <div class="image">
             <img src="image-qr-code.png" alt="scan this code to make payment">
         </div>
-            <section>
                 <h3>Improve your front-end <br> skills by building projects</h3>
-            </section>
-            <section>
                 <p>Scan the QR code to vist Front-end<br>Mentor and take your coding skills<br>
                 to the next level.</p>
-            </section>
         </div>
+    </section>
+    <section>
+        <div class="attribution">
+            <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+            <p>Coded by <a href="#">Ajiri Edafe</a>.</p>
+        </div>
+    </section>
         </main>
     </body>
 </html>
